// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with compact prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  display: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-left: 0.5rem;
}

@media (min-width:960px) {
  .c1 {
    display: none;
  }
}

<div
  className="c0"
>
  ProfileImage({"size":30,"viewer":"[Object]"})
  <span
    className="c1"
  >
    email@domain.com
  </span>
</div>
`;

exports[`Render with full name and email props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  display: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-left: 0.5rem;
}

@media (min-width:960px) {
  .c1 {
    display: inline;
  }
}

<div
  className="c0"
>
  ProfileImage({"size":30,"viewer":"[Object]"})
  <span
    className="c1"
  >
    Issac
  </span>
</div>
`;

exports[`Render with full prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  display: inline;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-left: 0.5rem;
}

@media (min-width:960px) {
  .c1 {
    display: inline;
  }
}

<div
  className="c0"
>
  ProfileImage({"size":30,"viewer":"[Object]"})
  <span
    className="c1"
  >
    email@domain.com
  </span>
</div>
`;

exports[`Render with only email & first name props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  display: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-left: 0.5rem;
}

@media (min-width:960px) {
  .c1 {
    display: inline;
  }
}

<div
  className="c0"
>
  ProfileImage({"size":30,"viewer":"[Object]"})
  <span
    className="c1"
  >
    Issac
  </span>
</div>
`;

exports[`Render with only required props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  display: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-left: 0.5rem;
}

@media (min-width:960px) {
  .c1 {
    display: inline;
  }
}

<div
  className="c0"
>
  ProfileImage({"size":30,"viewer":"[Object]"})
  <span
    className="c1"
  >
    email@domain.com
  </span>
</div>
`;

exports[`Render with profile image 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  display: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-left: 0.5rem;
}

@media (min-width:960px) {
  .c1 {
    display: inline;
  }
}

<div
  className="c0"
>
  ProfileImage({"size":30,"viewer":"[Object]"})
  <span
    className="c1"
  >
    email@domain.com
  </span>
</div>
`;
